tests/parse-fail/bad_module_ident.fl.0.exp
Error: bad_module_ident.fl(1,15): Expected identifier, but found: {
pub mod foo:: {
              ^ 
}

